data/derived/comb/progs/unify/prog1784.ml.out
Characters 67-68:
  if c' then wwhile f b' else b';;
                    ^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type ('a -> 'b * bool) * 'a
